# asteroids

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  asteroids.go  asteroids.wasm  go.mod  go.sum  index.html
canvas/: BUILD.bazel  canvas.go
desktop/: BUILD.bazel  config.go  index.html  init.js  lorca.go  wasm_exec.js  webview.go
desktop/cocoa/: BUILD.bazel  ns_window.go  ns_window.h  ns_window.m
game/: BUILD.bazel  asteroids.go  game.go  game_test.go  ship.go
js/canvas/: BUILD.bazel  canvas.go
js/keys/: BUILD.bazel  keys.go
neat/bot/: BUILD.bazel  neat.go
neat/players/: BUILD.bazel  player_1.genome  player_2.genome  player_3.genome  player_4.genome  player_5.genome
neat/train/: BUILD.bazel  neat.config  startgenes.config  train.go  train_test.go
render/: BUILD.bazel  render.go
scripts/: publish.sh
vector2d/: BUILD.bazel  matrix.go  matrix_test.go  polygon.go  polygon_test.go  sat.go  vector.go
wasm/: BUILD.bazel  asteroids.go  diagnostics.go  game.go  keys.go  main.go  ship.go
