load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "matrix.go",
        "polygon.go",
        "sat.go",
        "vector.go",
    ],
    importpath = "github.com/grahamjenson/asteroids/vector2d",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "matrix_test.go",
        "polygon_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
