load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "asteroids.go",
        "diagnostics.go",
        "game.go",
        "keys.go",
        "main.go",
        "ship.go",
    ],
    importpath = "github.com/grahamjenson/asteroids/wasm",
    visibility = ["//visibility:private"],
    deps = [
        "//canvas:go_default_library",
        "//vector2d:go_default_library",
    ],
)

go_binary(
    name = "wasm",
    embed = [":go_default_library"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)
