load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "diagnostics.go",
        "main.go",
    ],
    importpath = "github.com/grahamjenson/asteroids/wasm",
    visibility = ["//visibility:private"],
    deps = [
        "//game:go_default_library",
        "//js/canvas:go_default_library",
        "//neat/bot:go_default_library",
        "//neat/players:go_default_library",
        "//render:go_default_library",
        "//vendor/github.com/yaricom/goNEAT/neat/genetics:go_default_library",
        "//vendor/github.com/yaricom/goNEAT/neat/network:go_default_library",
    ],
)

go_binary(
    name = "wasm",
    embed = [":go_default_library"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)
